Clazz.newInstance is deprecated since Java 9, not sure why the build did not catch it here, but did in GeoServer... oh well