@@ -118,7 +118,7 @@ public abstract class DelegatingHandler<T> implements IContentHandler<T> {
 
                 return (IContentHandler) clazz.getConstructor(types).newInstance(args);
             } else {
-                return (IContentHandler) clazz.newInstance();
+                return (IContentHandler) clazz.getDeclaredConstructor().newInstance();
             }
 
         } catch (Exception e) {
